# robot_2023

./: .gitignore  README.md  output.xml  pyproject.toml  report.html  run.py
resources/: resourses.robot  resourses2.robot  variables.py
test_cases/: add_test.robot  first_test.robot  log.html  output.xml  report.html  secont_test.robot
test_cases/03_27_2023___17_20_44/: log.html  output.xml  report.html
test_cases/03_27_2023___17_22_23/: log.html  output.xml  report.html
test_cases/03_27_2023___18_00_47/: log.html  output.xml  report.html
