[tool.poetry]
name = "robot-2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "robot_2023"}]


[tool.poetry.dependencies]
python = "3.10.10"
requests = "^2.28.2"
robotframework = "^6.0.2"
robotframework-seleniumlibrary = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
